--- a/app/globals.css
+++ b/app/globals.css
@@ -81,3 +81,9 @@
     @apply bg-background text-foreground;
   }
 }
+
+.ql-container {
+  font-size: 16px !important;
+}
+
+@import "~@uploadthing/react/styles.css"
