--- a/app/globals.css
+++ b/app/globals.css
@@ -86,4 +86,11 @@
   font-size: 16px !important;
 }
 
+.ql-toolbar.ql-snow,
+.ql-editor,
+.ql-container.ql-snow {
+  border: none !important;
+  outline: none !important;
+}
+
 @import "~@uploadthing/react/styles.css"
